Fix clipping of toolbar on right

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,10 @@ footer:hover {
 	/*opacity: 1.0;*/
 }
 
+footer #toolbar {
+	padding-right: 0.5em;
+}
+
 label {
 	font-weight: bold;
 }
@@ -82,6 +86,7 @@ input[type="button"] {
 	white-space: nowrap;
 	padding-left: 0.5em;
 	padding-right: 1em;
+	margin-right: 0.5em;
 }
 #progress_h1,
 #progress_h2 {
